# recipebox_redux

./: README.md  db.sqlite3  pyproject.toml
recipe_app/: admin.py  forms.py  models.py  views.py
recipe_app/migrations/: 0001_initial.py  0002_auto_20200805_1806.py  0003_author_user.py  0004_recipe_favorite.py  0005_auto_20200910_0328.py  0006_auto_20200910_0409.py
recipe_app/templates/: author_detail.html  index.html  recipe_detail.html  standard_form.html
recipebox/: settings.py  urls.py
